--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -5,7 +5,16 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"></LinearLayout>
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
+        <EditText
+            android:id="@+id/Edt_Search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_write"
@@ -13,7 +22,8 @@
         android:layout_height="50dp"
         android:background="@color/point_blue"
         android:text="삽니다 글쓰기"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:onClick="onClick"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_buy"
