--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,12 +98,14 @@
             //로그인 버튼
 
             <ImageView
+                android:id="@+id/img_login"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="90dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/login_login" />
+                android:src="@drawable/login_login"
+                android:onClick="onClick"/>
 
             //비밀번호 찾기
 
