--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,6 @@
             android:orientation="vertical">
 
             //로그인 타이틀 이미지
-
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -96,16 +95,27 @@
             </LinearLayout>
 
             //로그인 버튼
-
-            <ImageView
-                android:id="@+id/img_login"
+            <RelativeLayout
+                android:id="@+id/layout_login"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginBottom="90dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/login_login"
-                android:onClick="onClick"/>
+                android:layout_marginBottom="90dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/back_gold"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="로그인"
+                    android:textSize="25sp"
+                    android:textColor="@color/black"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/notosanscjkkr_bold_cus"
+                    android:includeFontPadding="false"/>
+            </RelativeLayout>
 
             //비밀번호 찾기
 
