--- a/app/src/main/res/layout/activity_buy_write.xml
+++ b/app/src/main/res/layout/activity_buy_write.xml
@@ -21,21 +21,41 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:text="" />
+                    android:layout_height="50dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:text="상세히 입력해주세요"
+                        android:textSize="30dp"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_gray"/>
+                </LinearLayout>
 
                 <EditText
+                    android:id="@+id/edt_title"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="aaa" />
+                    android:textColor="@color/text_gray"
+                    android:hint="글제목"
+                    android:fontFamily="@font/notosanscjkkr_demilight_cus"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:textSize="14sp"
+                    android:layout_margin="5dp"/>
 
                 <EditText
+                    android:id="@+id/edt_name"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:hint="구입희망 게임기명"
+                    android:textColor="@color/text_gray"
+                    android:textAlignment="center"
+                    android:background="@drawable/edittext_bg"
+                    android:layout_margin="5dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="60dp"
                     android:orientation="horizontal">
 
                     <Button
@@ -43,13 +63,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_weight="1"
-                        android:text="지역선택" />
+                        android:text="지역선택"
+                        android:textColorHint="@color/text_gray"
+                        android:background="@drawable/edittext_bg"
+                        android:layout_margin="5dp" />
 
-                    <Button
+                    <EditText
+                        android:id="@+id/edt_amount"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_weight="1"
-                        android:text="구매희망 갯수" />
+                        android:hint="구매희망 갯수"
+                        android:background="@drawable/edittext_bg"
+                        android:textAlignment="center"
+                        android:layout_margin="5dp"  />
                 </LinearLayout>
 
                 <TextView
@@ -57,18 +84,22 @@
                     android:layout_height="30dp"
                     android:text="* 안심거래는 15일 내에 거래 안될 시 자동 삭제됩니다."
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/red"
                     android:textSize="16sp" />
 
                 <EditText
+                    android:id="@+id/edt_memo"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:text="aaa" />
+                    android:layout_height="250dp"
+                    android:hint="메모 작성"
+                    android:textColor="@color/text_gray"
+                    android:background="@drawable/edittext_bg"
+                    android:layout_margin="5dp"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/main_back1" />
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="1dp"-->
+                    <!--android:background="@color/main_back1" />-->
             </LinearLayout>
 
             <LinearLayout
@@ -78,38 +109,55 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="60dp"
                     android:text="구매자 정보"
+                    android:textColor="@color/text_gray"
+                    android:gravity="center"
                     android:textSize="30sp" />
 
                 <EditText
+                    android:id="@+id/edt_company_name"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="XX 게임장"
-                    android:textSize="20sp" />
+                    android:hint="오직 게임장"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:background="@drawable/edittext_bg"
+                    android:layout_margin="5dp"/>
 
                 <EditText
+                    android:id="@+id/edt_phone"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="010-1234-1234"
-                    android:textSize="20sp" />
+                    android:hint="010-0000-0000"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:background="@drawable/edittext_bg"
+                    android:layout_margin="5dp" />
 
                 <EditText
+                    android:id="@+id/edt_company_focus"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="구매자 주"
-                    android:textSize="20sp" />
+                    android:hint="구매자 주소"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:background="@drawable/edittext_bg"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:textAlignment="center"
                     android:text="수정하려면 해당하는 곳을 터치하세요" />
 
                 <Button
+                    android:id="@+id/btn_write"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:text="삽니다 글등록" />
+                    android:layout_height="60dp"
+                    android:gravity="center|bottom"
+                    android:background="@drawable/buy_write"
+                    android:onClick="onClick"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
