--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/layout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,8 +25,8 @@
 
             <ImageView
                 android:id="@+id/img_deal"
-                android:layout_width="227px"
-                android:layout_height="107px"
+                android:layout_width="240px"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
                 android:src="@drawable/deal_possible" />
         </LinearLayout>
@@ -34,13 +35,18 @@
             android:id="@+id/txt_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textColor="@color/text_gray"
+            android:layout_gravity="center_vertical"
+            android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="1">
 
             <TextView
                 android:id="@+id/txt_address"
@@ -48,23 +54,42 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                android:textAlignment="center"
                 android:layout_weight="1"/>
 
+            <TextView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/text_gray" />
             <TextView
                 android:id="@+id/txt_gamecount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                android:textAlignment="center"
                 android:layout_weight="1"/>
 
+            <TextView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/text_gray" />
             <TextView
                 android:id="@+id/txt_memo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
+                android:textColor="@color/colorAccent"
                 android:textSize="16sp"
+                android:text="안심거래"
+                android:textAlignment="center"
                 android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="1"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
