20180509-pjh Sell 레이아웃 생성 및 클래스 선언

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -120,6 +120,7 @@
             //비밀번호 찾기
 
             <LinearLayout
+                android:id="@+id/layout_find"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginBottom="7dp"
