--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -3,30 +3,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
+        android:background="@color/white"
         android:orientation="horizontal">
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="80dp" />
-        <EditText
-            android:id="@+id/Edt_Search"
-            android:layout_width="match_parent"
+
+        <TextView
+            android:layout_width="5dp"
             android:layout_height="match_parent" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:scaleType="centerInside"
+            android:src="@drawable/back" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/search_bar">
+
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="match_parent" />
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center" />
+        </LinearLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_write"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/point_blue"
-        android:text="삽니다 글쓰기"
-        android:textColor="@color/white"
-        android:onClick="onClick"/>
+        android:background="@drawable/buy_write"
+        android:onClick="onClick" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_buy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent" />
 </LinearLayout>
