--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -15,7 +15,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txt_gamename"
+                android:id="@+id/tv_gamename"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -32,7 +32,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/txt_title"
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/text_gray"
@@ -49,7 +49,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/txt_address"
+                android:id="@+id/tv_address"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
@@ -62,7 +62,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/text_gray" />
             <TextView
-                android:id="@+id/txt_gamecount"
+                android:id="@+id/tv_gamecount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
@@ -75,7 +75,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/text_gray" />
             <TextView
-                android:id="@+id/txt_memo"
+                android:id="@+id/tv_memo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/colorAccent"
