--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -9,49 +9,91 @@ android:orientation="vertical">
     android:layout_height="1dp"
     android:background="@color/line_gray" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="@color/white"
-    android:orientation="horizontal">
-
-    <TextView
-        android:layout_width="5dp"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:scaleType="centerInside"
-        android:src="@drawable/back" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/search_bar">
+        android:layout_height="50dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="match_parent" />
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            android:src="@drawable/back" />
 
-        <EditText
-            android:id="@+id/et_search"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center" />
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/box">
+
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="match_parent" />
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="통합 검색하기"
+                android:textColor="@color/black"
+                android:textColorHint="@color/text_gray"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/box">
+
+            <TextView
+                android:id="@+id/txt_mytxt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:gravity="center"
+                android:text="내가 쓴 글"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 
-<Button
-    android:id="@+id/btn_write"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="@drawable/buy_write"
-    android:onClick="onClick" />
+    <Button
+        android:id="@+id/btn_write"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/point_blue"
+        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+        android:includeFontPadding="false"
+        android:onClick="onClick"
+        android:text="삽니다 글쓰기"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/list_buy"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_buy"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 </LinearLayout>
