--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -8,88 +8,103 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_gamename"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="aaa"
-                android:textColor="@color/black"
-                android:textSize="28sp" />
-
+            android:layout_height="1dp"
+            android:background="@color/line_gray_bold"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/img_deal"
-                android:layout_width="240px"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:src="@drawable/deal_possible" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_gray"
-            android:layout_gravity="center_vertical"
-            android:textSize="24sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/tv_address"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/deal_possible"
+                android:adjustViewBounds="true"
+                android:layout_alignParentRight="true"
+                />
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/text_gray" />
-            <TextView
-                android:id="@+id/tv_gamecount"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/tv_gamename"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="동전교환기"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/notosanscjkkr_medium_cus"
+                    android:includeFontPadding="false"/>
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/text_gray" />
-            <TextView
-                android:id="@+id/tv_memo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="@color/colorAccent"
-                android:textSize="16sp"
-                android:text="안심거래"
-                android:textAlignment="center"
-                android:layout_weight="1" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="제목영역입니다. ~ 보조설명! 두줄까지 가능합니다"
+                    android:textColor="@color/text_gray"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/notosanscjkkr_medium_cus"
+                    android:includeFontPadding="false"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"/>
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="7dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/notosanscjkkr_medium_cus"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="서울"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tv_gamecount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/notosanscjkkr_medium_cus"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="서울"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/black" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="안심거래"
+                        android:textColor="@color/point_skyblue"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
